--- a/src/styles/_main.import.scss
+++ b/src/styles/_main.import.scss
@@ -14,6 +14,10 @@ body {
   overflow-x: hidden;
 }
 
+#app {
+  width: 100%;
+  height: 100%;
+}
 
 *, *:after, *:before {
   box-sizing: border-box;
