fix: minor styling and bugs

--- a/src/styles/_main.import.scss
+++ b/src/styles/_main.import.scss
@@ -2,8 +2,8 @@
 
 html {
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-  background-color: #0f1221;
-  color: white;
+  background-color: #DEFA86;
+  color: #2A2A2A;
   width: 100%;
   height: 100%;
 }
